fix: hide missing icons glow to fix layer details scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 }
 
 .glow-missing-icon {
-  animation: glow 1s ease-in-out infinite alternate;
+  /* animation: glow 1s ease-in-out infinite alternate; */
 }
 
 @keyframes glow {
